--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Task Management API
+
+# Configurações do banco de dados
+#spring.datasource.url=jdbc:sqlserver://database-for-study.c5cq6coyypvd.us-east-2.rds.amazonaws.com:1433;databaseName=database-for-study;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=rodolfodev
+#spring.datasource.password=TXcE6zgyXDLyYTOn5FLL
+spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=desafio-stefanini
+spring.datasource.username=rodolfodev
+spring.datasource.password=d3s4f10
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+# Configurações do Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
