--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.application.name=Task Management API
+app.name=@project.name@
+app.description=@project.description@
+app.version=@project.version@
 
 # Configurações do banco de dados
 #spring.datasource.url=jdbc:sqlserver://database-for-study.c5cq6coyypvd.us-east-2.rds.amazonaws.com:1433;databaseName=database-for-study;encrypt=true;trustServerCertificate=true
 #spring.datasource.username=rodolfodev
 #spring.datasource.password=TXcE6zgyXDLyYTOn5FLL
-spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=desafio-stefanini
-spring.datasource.username=rodolfodev
-spring.datasource.password=d3s4f10
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=master;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=!D3s4F10j4V4!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
